ad cabecera visibility fix

--- a/wp-content/themes/kleo-child/style.css
+++ b/wp-content/themes/kleo-child/style.css
@@ -6115,6 +6115,7 @@ li.bp-menu.bp-login-nav.menu-item.menu-item-type-bp_nav.menu-item-object-bp_logg
 	#div-gpt-ad-1457985102265-0{
 		z-index: 99999;
 		background-color: white;
+		visibility: visible !important;
 	}
 }
 
